[package]
name = "rust_makemore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
burn = { version = "0.13.2", features = ["candle"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
